[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "util_common"
version = "0.2.7"
description = "..."
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = [
    "rich",
    "natsort",
    "python-magic",
    "python-json-logger",
    "pydantic",
    "colorlog",
    "base58",
]

[[project.authors]]
name = "Sheldon Lee"
email = "sheldonlee@outlook.com"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = ["build", "pytest", "mypy", "types-toml", "pre-commit"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/"]
include = ["util_common*", "util_common/*"]

[tool.sys-dependencies]
apt = ["libmagic1", "rar", "p7zip-full"]
